# epubtocbz

./: Pipfile  images.py  license.txt  main.py  metadata.py  pyproject.toml
convert/: __init__.py  metadata.py
epubtocbz/: __init__.py  __main__.py  arguments.py  files.py
epubtocbz/convert/: __init__.py  images.py  metadata.py
epubtocbz/convert/internals/: __init__.py  container.py  model.py  opf.py  xhtml.py
